<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FriendRequestsActivity">

    <Button
        android:id="@+id/button_incoming_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="incoming requests"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.477" />

    <Button
        android:id="@+id/button_outgoing_requests"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="outgoing requests"
        android:background="@drawable/rounded_button"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.076" />

    <TextView
        android:id="@+id/text_outgoing_requests"
        android:layout_width="257dp"
        android:layout_height="170dp"
        android:layout_marginTop="9dp"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/button_incoming_requests"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_outgoing_requests"
        app:layout_constraintVertical_bias="0.179" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycler_view_incoming_requests"
        android:layout_width="365dp"
        android:layout_height="264dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button_incoming_requests"
        app:layout_constraintVertical_bias="0.139" />

</androidx.constraintlayout.widget.ConstraintLayout>